hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_getDependencies_variation2.php
<?php
$standard = new ReflectionExtension('standard');
var_dump($standard->getDependencies());
?>
==DONE==
